@@ -4,6 +4,7 @@ Bugs & fixes:
  - order cancelling seems to be broken after recent changes
  - add error checking to config system (check for invalidity of entries)
  - maximising the window does not cause QML scene to change size
+ - context menu needs to be readjusted to show appropriately when game area is zoomed
 
 New features:
  - add game menu
@@ -29,7 +30,11 @@ New features:
  - add AI (well, obviously)
  - parametrize all unit actions (animation durations, acceleration etc.)
  - adjust parameters to be more human-readable
- - add FPS counter
+ - make roster more useful on mobile and elsewhere, by making it's view more dynamic:
+    - allow for hiding of roster
+    AND/ OR
+    - add flickability to roster
+ +/- add FPS counter
 
 Big ideas for the future:
  - add advanced world map option (something like TripleA or Hearts of Iron, but with option to perform close combat battles
@@ -70,3 +75,4 @@ Done:
     + keyboard shortcuts
     + desktop/ mobile mode
     + game window resolution, window state (full screen, maximised)
+ + add zooming to game area
